--- a/home.html
+++ b/home.html
@@ -18,25 +18,25 @@
 </head>
 <body class="bg-yellow-50 text-gray-900 text-sm">
 
-<!-- ░░ HEADER ░░ -->
+<!-- Header -->
 <header class="bg-red-800 text-white py-3 px-4 relative flex items-center justify-between shadow-md">
-<h1 class="text-xl font-bold">
-  <a href="home.html" class="hover:underline">MajeeoNuts</a>
-</h1>
+  <h1 class="text-xl font-bold">
+    <a href="home.html" class="hover:underline">MajeeoNuts</a>
+  </h1>
   <nav class="nav-centre space-x-4 text-xs">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
     <a href="contact.html" class="hover:underline">Contact Us</a>
   </nav>
   <div class="flex items-center space-x-2">
-<input id="searchInput" type="text" placeholder="Search…" class="px-2 py-1 rounded border border-gray-300 focus:ring-2 focus:ring-red-600 w-32 text-xs text-black">
+    <input id="searchInput" type="text" placeholder="Search…" class="px-2 py-1 rounded border border-gray-300 focus:ring-2 focus:ring-red-600 w-32 text-xs text-black">
     <a href="cart.html" class="bg-red-700 text-white px-3 py-1 rounded-full text-sm font-semibold hover:bg-red-600 flex items-center">
       🛒 Cart&nbsp;<span id="cart-count" class="ml-1 bg-white text-red-700 px-2 rounded-full text-[10px] font-bold"></span>
     </a>
   </div>
 </header>
 
-<!-- ░░ HERO + SIDE-CART ░░ -->
+<!-- Hero + Side Cart -->
 <section class="max-w-5xl mx-auto mt-4 px-2 flex flex-col md:flex-row gap-4">
   <div class="w-full md:w-2/3 rounded-lg overflow-hidden shadow">
     <video class="w-full aspect-square h-[220px] object-cover rounded-lg" controls>
@@ -51,12 +51,10 @@
   </aside>
 </section>
 
-<!-- ░░ PRODUCT GRID ░░ -->
-<div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
-  <!-- Product cards are injected by JS -->
-</div>
+<!-- Product Grid -->
+<div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4"></div>
 
-<!-- ░░ FOOTER ░░ -->
+<!-- Footer -->
 <footer class="bg-white border-t mt-12 text-xs">
   <div class="bg-gray-100 py-6 px-6 lg:px-16">
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
@@ -94,6 +92,7 @@
   </div>
 </footer>
 
+<!-- JS: Products + Cart Logic -->
 <script>
   const STORAGE_KEY = 'majeeo-cart';
   const products = [
@@ -107,17 +106,16 @@
     { name:"Anjeer (Figs)", img:"images/Anjeer.png", price:900, desc:"Naturally sweet sun‑dried figs.", best:false, link:"product-anjeer.html" }
   ];
 
+  const getCart = () => JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
+  const saveCart = (c) => localStorage.setItem(STORAGE_KEY, JSON.stringify(c));
   const cartItemsDiv = document.getElementById('cart-items');
   const checkoutBtn = document.getElementById('checkout-btn');
   const badge = document.getElementById('cart-count');
 
-  const getCart = () => JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
-  const saveCart = (c) => localStorage.setItem(STORAGE_KEY, JSON.stringify(c));
-
   function renderProducts() {
     const container = document.querySelector(".grid");
     products.forEach(p => {
-      const html = `
+      container.innerHTML += `
         <article class="bg-white rounded-lg shadow p-3">
           <h2 class="font-semibold mb-1 text-xs"><a href="${p.link}" class="hover:underline">${p.name}</a></h2>
           <a href="${p.link}"><img src="${p.img}" alt="${p.name}" class="w-full h-32 object-cover rounded mb-2"></a>
@@ -131,7 +129,6 @@
           </div>
           <button class="add-to-cart w-full bg-red-600 text-white py-1 text-xs rounded" data-name="${p.name}" data-price="${p.price}">Add to Cart</button>
         </article>`;
-      container.insertAdjacentHTML("beforeend", html);
     });
   }
 
@@ -157,9 +154,9 @@
   function removeOne(index) {
     const c = getCart();
     const item = c[index];
+    const perGram = item.grams / item.count;
+    const perPrice = item.price / item.count;
     if (item.count > 1) {
-      const perGram = item.grams / item.count;
-      const perPrice = item.price / item.count;
       item.count--;
       item.grams -= perGram;
       item.price -= perPrice;
