--- a/home.html
+++ b/home.html
@@ -139,7 +139,7 @@
         <div class="border p-2 rounded flex justify-between items-center">
           <div>
             <p class="font-semibold">${item.name}</p>
-            <p>${item.count} × ${item.grams / item.count}g – ₹${item.price.toFixed(2)}</p>
+<p>${item.count} × ${(item.unitGrams || item.grams / item.count)}g – ₹${item.price.toFixed(2)}</p>
           </div>
           <div class="flex gap-1">
             <button onclick="removeOne(${i})" class="text-yellow-600 text-xs border px-2 rounded">−1</button>
