Updated indexpage with logo image

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 <!-- Header -->
 <header class="bg-red-800 text-white py-3 px-4 relative flex items-center justify-between shadow-md">
-  <h1 class="text-xl font-bold">
-    <a href="home.html" class="hover:underline">MajeeoNuts</a>
-  </h1>
+ <a href="home.html" class="flex items-center space-x-2">
+  <img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <span class="text-xl font-bold">MajeeoNuts</span>
+</a>
   <nav class="nav-centre space-x-4 text-xs">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
