--- a/cart.html
+++ b/cart.html
@@ -14,9 +14,10 @@
 
   <!-- Header -->
   <header class="bg-red-800 text-white py-3 px-6 flex justify-between items-center">
-    <h1 class="text-xl font-bold">
-      <a href="home.html" class="hover:underline">MajeeoNuts</a>
-    </h1>
+   <a href="home.html" class="flex items-center space-x-2">
+  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <span class="text-xl font-bold">MajeeoNuts</span>
+</a>
     <a href="home.html" class="text-sm bg-white text-red-700 px-3 py-1 rounded-full font-semibold hover:bg-yellow-100 flex items-center">
       🛒 Go to Cart&nbsp;<span id="cart-count" class="ml-1 bg-red-600 text-white px-2 rounded-full text-[10px] font-bold"></span>
     </a>
@@ -40,7 +41,7 @@
     <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
       <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
         <div>
-          <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
+<img src="../images/majeeo-logo.png" alt="MajeeoNuts Logo" class="w-20 mb-2">
           <p class="text-gray-600">Majeeo Nuts brings you premium dry fruits from across India and the world.</p>
         </div>
         <div>
