--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,10 @@
 <body class="bg-yellow-50 font-sans">
 
   <header class="bg-green-800 text-white p-4 flex justify-between items-center">
-<h1 class="text-xl font-bold">
-  <a href="home.html" class="hover:underline">MajeeoNuts</a>
-</h1>
+<a href="home.html" class="flex items-center space-x-2">
+  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <span class="text-xl font-bold">MajeeoNuts</span>
+</a>
     <nav class="space-x-4">
       <a href="home.html" class="hover:underline">Home</a>
       <a href="about.html" class="hover:underline">About Us</a>
