--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
   <div class="bg-gray-100 py-6 px-6 lg:px-16">
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
       <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
+<img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="w-20 mb-2">
         <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
       </div>
       <div>
