--- a/product-pista.html
+++ b/product-pista.html
@@ -27,9 +27,10 @@
 <body class="text-gray-800 text-sm">
 
 <header class="bg-red-800 text-white py-3 px-6 relative shadow flex items-center justify-between">
-  <h1 class="text-xl font-bold">
-    <a href="home.html" class="hover:underline">MajeeoNuts</a>
-  </h1>
+  <a href="home.html" class="flex items-center space-x-2">
+  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <span class="text-xl font-bold">MajeeoNuts</span>
+</a>
   <nav class="space-x-4 text-sm nav-center">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
@@ -80,7 +81,7 @@
   <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
       <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
+<img src="../images/majeeo-logo.png" alt="MajeeoNuts Logo" class="w-20 mb-2">
         <p class="text-gray-600">Majeeo Nuts brings you premium dry fruits from across India and the world.</p>
       </div>
       <div>
