--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
       <!-- Brand and Description -->
       <div>
-        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-24 mb-2">
+<img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="w-20 mb-2">
         <p class="text-gray-600">Majeeo Nuts brings you a collection of carefully selected dry fruits from India and across the world.</p>
       </div>
 
