--- a/product-almonds.html
+++ b/product-almonds.html
@@ -85,7 +85,7 @@
   <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
       <div>
-<img src="../images/majeeo-logo.png" alt="MajeeoNuts Logo" class="w-20 mb-2">
+<img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="w-20 mb-2">
         <p class="text-gray-600">Majeeo Nuts brings you premium dry fruits from across India and the world.</p>
       </div>
       <div>
