--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
   <header class="bg-green-800 text-white p-4 flex justify-between items-center">
 <a href="home.html" class="flex items-center space-x-2">
-  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
   <span class="text-xl font-bold">MajeeoNuts</span>
 </a>
     <nav class="space-x-4">
