--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="bg-red-800 text-white py-3 px-6 flex justify-between items-center">
    <a href="home.html" class="flex items-center space-x-2">
-  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
   <span class="text-xl font-bold">MajeeoNuts</span>
 </a>
     <a href="home.html" class="text-sm bg-white text-red-700 px-3 py-1 rounded-full font-semibold hover:bg-yellow-100 flex items-center">
