--- a/product-abc.html
+++ b/product-abc.html
@@ -14,7 +14,7 @@
 <!-- Header -->
 <header class="bg-red-800 text-white py-3 px-4 flex justify-between items-center shadow-md">
 <a href="home.html" class="flex items-center space-x-2">
-  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
   <span class="text-xl font-bold">MajeeoNuts</span>
 </a>
   <a href="cart.html" class="bg-white text-red-700 px-3 py-1 rounded-full text-sm font-semibold hover:bg-red-100 flex items-center">
