--- a/product-pista.html
+++ b/product-pista.html
@@ -28,7 +28,7 @@
 
 <header class="bg-red-800 text-white py-3 px-6 relative shadow flex items-center justify-between">
   <a href="home.html" class="flex items-center space-x-2">
-  <img src="images/majeeo-logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
+  <img src="images/MajeeoNuts.Logo.png" alt="MajeeoNuts Logo" class="h-8 w-auto">
   <span class="text-xl font-bold">MajeeoNuts</span>
 </a>
   <nav class="space-x-4 text-sm nav-center">
